2009-02-26  Xan Lopez  <xan@gnome.org>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=24193
        [GTK] Checkbuttons not activated with space

        Do not swallow key events with GtkIMContext for non-editable
        frames (FIXME: I don't think frame is the right name here).

        * WebCoreSupport/EditorClientGtk.cpp:
        (WebKit::EditorClient::handleInputMethodKeydown):

Canonical link: https://commits.webkit.org/33324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41249 268f45cc-cd09-0410-ab3c-d52691b4dbfc